0.43 - updated ruby code build to take sitearch into account during includes
	updated ruby code to map STR2CSTR to StringValuePtr for ruby 1.9
	updated to use rudiments' updated signalclasses
	replaced calls to fork() and exit() with process class calls

0.42 - fixed a bug causing cursor id's not to get set for some db's
	updated configure script to look for client64 in addition to client
		for oracle intantclient on x86_64
	added setTimeout to all API's
	applied some patches from Alexey Leontev
	bumped BINDVARLENGTH up to 64
	applied Renat Sabitov's scaler -debug patch and 11g configure patch
	applied Stephan van Egmond's sqlrsh history patch
	added configure test for gmake, use it to find ruby.h
	applied mingang@taobao.com's scaler patch for -debug
	added getting started notes for Oracle 11.2 on Fedora Core 12
	added test for mdb_sql_run_query and code to use it if it's there
	fixed a bug that caused ping to fail after reconnecting to sybase
	added configure test for xsubpp
	fixed perl dbi inout bind problem
	fixed code that was adding a NULL terminator to oracle clob values
	applied several patches from Renat Sabitov
	applied dynamic cursor patch from Cal Heldenbrand
	applied Claudio Freire's normalized matching and xmlparsing patches
	fixed sqlite connection to use sqlite3_malloc/free
	update freetds connection to get tds version with ct_config if
		TDS_VERSION_NO doesn't exist
	applied a fix for a bug that could cause a crash when a cursor is
		reused
	fixed a shutdown race condition in connection daemons
	moved common startup/shutdown code for connection daemons up into
		static methods/variables of the sqlrconnection_svr class
	fixed a crash in the oracle connection daemon where OCIHandleFree
		was getting called on define handles that weren't created by
		OCIHandleAlloc
	removed rebuild target from Makefiles
	updated tests
	refactored main() method for connections
	added searches for ruby1.8, ruby19 and ruby1.9 in configure script